# PBGZIP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deflate.cpp  generate.cpp  main.cpp  serialize.cpp
include/: deflate.h  serialize.h
